--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course work</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Course work</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="container">
+        <img src="./img/Litigade.png" alt="">
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Product</a>
+            </li>
+            <li>
+              <a href="#">Prising</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+            <img src="./img/Vector.png" alt="">
+            <img src="./icn shopping-cart .icn-xs.png" alt="">
+            <img  src="./Vector (2).png" alt="">
+          </ul>
+        </nav>
+      </div>
+      
+    </div>
+    <main>
+      <div class="card">
+        <h1>LEGAL PRO <br>
+          SERVICES</h1>
+        <p>We know how large objects will act,
+          <br> but thing on a small scale</p>
+        <li><a href="#" class="sign-in"></a></li>
+        <li><a href="#" class="sign-up"></a></li>
+        <img src="./img/card-item.png" alt="" sizes="" srcset="">
+      </div>
+
+    </main>
+  </body>
 </html>
