--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
                 <div>
                   <img src="./cover (1).png" alt="">
                   <div>
-                  <p>Ashley Fletcher</p>
+                  <h5>Ashley Fletcher</h5>
                   <h6>LAYER & CEO</h6>
+                  <img src="./div.png" alt="">
                 </div>
   
                   </div>
