--- a/index.html
+++ b/index.html
@@ -247,10 +247,11 @@
     <div class="foterdiv">
       <h3 class="h3">Request A Free Consultation</h3>
       <p class="p">the quick fox jumps over the lazy dog</p>
+      <button> Contact </button>
 
     </div>
 
-    
+
 
 
 
