--- a/index.html
+++ b/index.html
@@ -251,11 +251,21 @@
 
     </div>
 
-    
+
     <footer>
+      <h3>Litigade </h3>
+      <hr>
+      <h5>Company Info</h5>
+    
+      <h5>Legal</h5>
+       <div class="foterr">
+      <h6>Made With Love By Figmaland All Right Reserved </h6>
+    </div>
 
     </footer>
 
+   
+ 
 
 
 
