--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 
     <footer>
       <h3>Litigade </h3>
+      <img src="./col-md-6.png" alt="">
       <hr>
       <h5>Company Info</h5>
     
